Prevent long body content from overlapping footer.

--- a/public_site/static/public_site/style.css
+++ b/public_site/static/public_site/style.css
@@ -38,9 +38,14 @@ button.sidenav:hover {
   margin-right: 100px;
 }
 
+.body {
+    margin-bottom: 60px;
+}
+
 .footer {
    font-family: "Crimson Text", Times, serif;
    font-size: 16px;
+   background-color: white;
    width:100%;
    height:60px;
    position: fixed;
